--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 <html>
-{% include.head.html %} 
-{% include.header.html %}
+{% include head.html %} 
+{% include header.html %}
 <body>
   <div class="page_wrapper">
     <img src="/assets/img/{{ page.background }}">
