--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,16 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Music</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link disabled" href="#">About</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link disabled" href="#">About</a>
       </li>
     </ul>
   </div>
