--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 {% include header.html %}
 <body>
   <div class="page_wrapper">
-    <img src="/assets/img/{{ page.background }}">
+    <img src="../assets/img/{{ page.background }}">
     <h1>Welcome to my world of music</h1>
   </div>
 </body>
