--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,5 +6,6 @@
     <img src="../assets/img/{{ page.background }}">
     <h1>Welcome to my world of music</h1>
   </div>
+  {% include footer.html %}
 </body>
 </html>
