--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
-  <link rel="stylesheet" href="../css/boostrap.min.css">
-  <link re="stylesheet" href="../css/bootstrap-grid.min.css">
-  <link re="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/boostrap.min.css">
+  <link re="stylesheet" href="/css/bootstrap-grid.min.css">
+  <link re="stylesheet" href="/css/style.css">
   <title>{{ site.title }}</title>
 </head>
