--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@
 {% include header.html %}
 <body>
   <div class="page_wrapper">
-    <img src="../assets/img/{{ page.background }}">
-    <h1>Welcome to my world of music</h1>
+    <img id="home_background" src="../assets/img/{{ page.background }}">
+    <h1 id="intro_txt">Welcome to my world of music</h1>
   </div>
   {% include footer.html %}
 </body>
