--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
-h1 {
+#intro_txt {
   color: white;
   font-size: 2em;
   position: absolute;
   top: 35%;
+}
+
+#home_background {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
 }
