--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,6 @@
   <meta name="description" content="{{ site.description }}">
   <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
   <link re="stylesheet" href="{{ "css/bootstrap-grid.min.css" | relative_url }}">
-  <link re="stylesheet" href="{{ "css/main.css" | relative_url }}">
+  <link re="stylesheet" href="{{ "css/style.css" | relative_url }}">
   <title>{{ site.title }}</title>
 </head>
