--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import 'bootstrap.min.css'
-@import 'bootstrap-grid.css'
+@import url('bootstrap.min.css');
+@import url('bootstrap-grid.css');
 
 #intro_txt {
   color: white;
