--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
   <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
-  <link re="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <link re="stylesheet" href="{{ "assets/main.css" }}">
   <title>{{ site.title }}</title>
 </head>
