--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
   <link re="stylesheet" href="{{ "assets/main.css" }}">
+  <link re="stylesheet" href="{{ "css/bootstrap.min.css" }}">
   <title>{{ site.title }}</title>
 </head>
