--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
-  <link re="stylesheet" href="{{ "assets/main.css" }}">
-  <link re="stylesheet" href="{{ "css/bootstrap.min.css" }}">
+  <link re="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <link re="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
   <title>{{ site.title }}</title>
 </head>
