--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
         <a class="nav-link" href="#">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">About</a>
+        <a class="nav-link" href="#">About</a>
       </li>
      <li class="nav-item">
-        <a class="nav-link disabled" href="#">About</a>
+        <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
   </div>
