--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   {% include header.html %}
   <div class="page_wrapper">
     <img id="home_background" src="../assets/img/{{ page.background }}">
-    <h1 id="intro_txt">Welcome to my world of music</h1>
+    <h1 id="intro_txt">{{ page.title }}</h1>
   </div>
   {% include footer.html %}
 </body>
