--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   {% include header.html %}
   <div class="page_wrapper">
     <img id="home_background" src="../assets/img/{{ page.background }}">
-    <h1 id="intro_txt">{{ page.intro }}</h1>
+    <h1 class="justify-content-end" id="intro_txt">{{ page.intro }}</h1>
   </div>
   {% include footer.html %}
 </body>
