Improve Design for Home Page | Added New Bg | Added Better Text | Changed Postion and background of Nav

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer id="footer">
   <ul>
     <li><a href="{{ site.spotify_link }}">SPOTIFY</a></li>
+    <li><a href="{{ site.spotify_link }}">BANDCAMP</a></li>
     <li><a href="{{ site.itunes_link }}">ITUNES</a></li>
     <li><a href="{{ site.pandora_link }}">PANDORA</a></li>
     <li><a href="{{ site.youtube_link }}">YOUTUBE</a></li>
