--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
-   <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <script src="https://use.fontawesome.com/b85ab3568d.js"></script>
   <title>{{ site.title }}</title>
 </head>
