--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,17 @@
   <div class="page_wrapper">
     <img id="home_background" src="../assets/img/{{ page.background }}">
     <h1 class="justify-content-end" id="intro_txt">{{ page.intro }}</h1>
+    <div class="icon_holder">
+
+    <ul>
+        <li>Listen Now:</li>
+        <li><a href="{{ page.spotify }}"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+        <li><a href="{{ page.bandcamp }}"><img class="bandcamp_logo" src="assets/img/bandcamp-button-circle-black-64.png"></a></li>
+        <li><a href="{{ page.itunes }}"><i class="fa fa-music" aria-hidden="true"></i></a></li>
+        <li><a href="{{ page.youtube}}"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+        <li><a href="{{ page.vinyl }}">Vinyl</a></li>
+    </ul>
+    </div>
   </div>
-  {% include footer.html %}
 </body>
 </html>
