made footer noice

--- a/assets/main.css
+++ b/assets/main.css
@@ -20,6 +20,11 @@
 #footer ul {
     display: flex;
     justify-content: space-between;
+    font-size: 14px;
+    margin: 0;
+    padding: 5%;
+    width: 60%;
+    margin-left: 20%;
 }
 #footer ul li {
     color: white;
