added javscript and jquery library support | for bootstrap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,3 +10,6 @@
     <li><a href="{{ site.instagram_link }}">INSTAGRAM</a></li>
   </ul>
 </footer>
+<script type="text/javascript" src="https://code.jquery.com/jquery-git.min.js"></script>
+<script type="text/javascript" src="{{ "assets/js/bootstrap.min.js" | relative_url }}"></script>
+
