--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,6 @@
   <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
   <title>{{ site.title }}</title>
 </head>
