--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <!--Meta Data-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
-
+  {% seo %}
   <!--Stylesheets-->
   <link rel="stylesheet" href="{{ "{{ site.url }}/css/bootstrap.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
