--- a/_includes/blog-footer.html
+++ b/_includes/blog-footer.html
@@ -11,5 +11,6 @@
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-git.min.js"></script>
 <script type="text/javascript" src="{{ "assets/js/bootstrap.min.js" | relative_url }}"></script>
-<script type="text/javascript" src="{{ "assets/js/blog_script.js" | relative_url }}"></script>
-
+<script type="text/javascript" src="{{ "assets/js/script.js" | relative_url }}"></script>
+<script id="dsq-count-scr" src="//pantingpanda.disqus.com/count.js" async></script>
+<script type="text/javascript" src="{{ "assets/js/masonry.pkgd.js" | relative_url }}"></script>
