--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -1,6 +1,6 @@
 ---
 layout: blogs
-canonical_url: 'https://github.com/jekyll/jekyll-seo-tag/'
+canonical_url: 'http://pantingpanda.band/'
 ---
 <div class="blog_page_wrapper">
     <article>
