Fixed Reponsive Error

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <!--Stylesheets-->
   <link rel="stylesheet" href="{{ "{{ site.url }}/css/bootstrap.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "{{ site.url }}/assets/main.css" | relative_url }}">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700|PT+Sans:400,400i" rel="stylesheet">
   <!--Scripts-->
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/538888beb6db37d937f4c2357/d6734e97b509bf14a2025a8fd.js");</script>
