Added logo + animations | changed font from Nunito to Lato

--- a/_layouts/music-post.html
+++ b/_layouts/music-post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+canonical_url: "https://pantingpanda.band/"
 ---
 <article>
     <div class="music_post_wrapper">
-        <h1 class="display-3">{{ page.title }}</h1>
+        <h1 class="display-3">{{ page.title }} | <small>{{ page.release_type }}</small></h1>
         <hr>
         <a href="{{ page.spotify }}"><i class="fa fa-spotify" aria-hidden="true"></i></a>
         <a href="{{ page.bandcamp }}"><i class="fa fa-bandcamp" aria-hidden="true"></i></a>
