--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <header>
  <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#">Panting Panda</a>
+  <a class="navbar-brand" href="">
+    <object height="75px" id="logo_object" data="{{ site.url }}/assets/img/logo.svg">
+      <img src="{{ site.url }}/assets/img/logo.png">
+    </object>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,4 +28,4 @@
     </ul>
   </div>
 </nav>
-</header> 
+</header>
