--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -1,14 +1,14 @@
 ---
 layout: blogs
-canonical_url: 'http://pantingpanda.band/'
+canonical_url: "https://pantingpanda.band/"
 ---
 <div class="blog_page_wrapper">
     <article>
         <div class="row">
             <div class="col-md-12, col-sm-12, col-lg-12">
                 <div class="post_content_wrapper">
-                    <div class="jumbotron border" style="background:{{ page.background }}">
-                        <h1 class="display-3">{{ page.title }}</h1>
+                    <div class="jumbotron border-thick" style="background:{{ page.background }}">
+                        <h1 class="display-4 text-center">{{ page.title }}</h1>
                     </div>
                     <img class="img-responsive" src="{{ site.url}}/assets/img/{{ page.thumbnail }}">
                     {{ content }}
