--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -253,7 +253,7 @@ $h5-font-size: 1.25rem !default;
 $h6-font-size: 1rem !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+$headings-font-family:   'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 $headings-font-weight:   500 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
