--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-        <img class="img-responsive" src="assets/img/{{ blogs.img }}">
+        <img class="img-responsive" src="assets/img/{{ page.img }}">
     </div>
     <div class="col-md-6">
       <div class="display-3">
