--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -10,7 +10,7 @@ canonical_url: 'http://pantingpanda.band/'
                     <div class="jumbotron border" style="background:{{ page.background }}">
                         <h1 class="display-3">{{ page.title }}</h1>
                     </div>
-                    <img class="img-responsive" src="{{ site.url}}/assets/img/{{ page.thumbnail }}">
+                    <img class="img-responsive" src="{{ page.thumbnail }}">
                     {{ content }}
                 </div>
             </div>
