added some changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
   </ul>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-git.min.js"></script>
+<script type="text/javascript" src="{{ "assets/js/popover.min.js" | relative_url }}"></script>
 <script type="text/javascript" src="{{ "assets/js/bootstrap.min.js" | relative_url }}"></script>
 <script type="text/javascript" src="{{ "assets/js/script.js" | relative_url }}"></script>
 <script type="text/javascript" src="{{ "assets/js/masonry.pkgd.js" | relative_url }}"></script>
