--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
- <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="">
+ <nav class="navbar navbar-expand-lg">
+  <a class="navbar-brand" href="/">
     <object height="75px" id="logo_object" data="{{ site.url }}/assets/img/logo.svg">
       <img src="{{ site.url }}/assets/img/logo.png">
     </object>
@@ -19,11 +19,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/blog">Blog</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="/about">About</a>
-      </li>
+      </li>-->
      <li class="nav-item">
-        <a class="nav-link" href="/contact">Contact</a>
+        <a class="nav-link" href="mailto:moniet@pantingpanda.band">Contact</a>
       </li>
     </ul>
   </div>
