--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -7,10 +7,10 @@ canonical_url: "https://pantingpanda.band/"
         <div class="row">
             <div class="col-md-12, col-sm-12, col-lg-12">
                 <div class="post_content_wrapper">
-                    <div class="jumbotron border-thick" style="background:{{ page.background }}">
+                    <div class="jumbotron">
                         <h1 class="display-4 text-center">{{ page.title }}</h1>
                     </div>
-                    <img class="img-responsive" src="{{ site.url}}/assets/img/{{ page.thumbnail }}">
+                    <img class="img-responsive" src="{{ page.thumbnail }}">
                     {{ content }}
                 </div>
             </div>
