--- a/_layouts/music-post.html
+++ b/_layouts/music-post.html
@@ -5,10 +5,10 @@ canonical_url: "https://pantingpanda.band/"
 <article>
     <div class="music_post_wrapper">
         <h1 class="display-3">{{ page.title }} | <small>{{ page.release_type }}</small></h1>
-        <hr>
-        <a href="{{ page.spotify }}"><i class="fa fa-spotify" aria-hidden="true"></i></a>
-        <a href="{{ page.bandcamp }}"><i class="fa fa-bandcamp" aria-hidden="true"></i></a>
-        <a href="{{ page.itunes }}"><i class="fa fa-music" aria-hidden="true"></i></a>
+        <a href="{{ page.bandcamp }}"><i class="fa fa-music" aria-hidden="true"></i></a>
+
+        <!--<a href="{{ page.spotify }}"><i class="fa fa-spotify" aria-hidden="true"></i></a>
+        <a href="{{ page.itunes }}"><i class="fa fa-music" aria-hidden="true"></i></a>-->
         <div class="row">
             <div class="col-md-8, col-sm-12, col-lg-10">
                 <div class="post_content_wrapper">
