--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,13 +14,13 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/music">Music</a>
+        <a class="nav-link" href="/music.html">Music</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blog">Blog</a>
+        <a class="nav-link" href="/blog.html">Blog</a>
       </li>
       <!--<li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/about.html">About</a>
       </li>-->
      <li class="nav-item">
         <a class="nav-link" href="mailto:moniet@pantingpanda.band">Contact</a>
