--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -11,7 +11,7 @@ canonical_url: https://pantingpanda.band/
                     <div class="jumbotron">
                         <h1 class="display-4 text-center">{{ page.title }}</h1>
                     </div>
-                    <img class="img-responsive" src="{{ page.thumbnail }}">
+                    <img class="img-responsive" src="{{ site.url }}/assets/img/{{ page.thumbnail }}">
                     {{ content }}
                 </div>
             </div>
