--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   {% include header.html %}
   <main class="page-content" aria-label="Content">
     <div style="background-color:rgba(0,0,0,0.2);">
-    <img id="home_background" style="opacity:0.7;" src="https://pantingpanda.band/assets/img/{{ page.background }}">
+    <img id="home_background" style="opacity:0.7;" src="{{ site.url }}/assets/img/{{ page.background }}">
     </div>
     <h1 class="text-left" id="intro_txt">{{ page.intro }}</h1>
     <div class="icon_holder">
