--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -3,15 +3,15 @@ layout: blogs
 canonical_url: https://pantingpanda.band/
 ---
 
-<div class="blog_page_wrapper">
-    <article>
+<div role="main" class="blog_page_wrapper">
+    <article role="article">
         <div class="row">
             <div class="col-md-12, col-sm-12, col-lg-12">
                 <div class="post_content_wrapper">
                     <div class="jumbotron">
-                        <h1 class="display-4 text-center">{{ page.title }}</h1>
+                        <h1 role="header" id="blog_header"class="display-4 text-center">{{ page.title }}</h1>
                     </div>
-                    <img class="img-responsive" src="{{ site.url }}/assets/img/{{ page.thumbnail }}">
+                    <img class="img-responsive" aria-labelledby="blog_header" src="{{ site.url }}/assets/img/{{ page.thumbnail }}">
                     {{ content }}
                 </div>
             </div>
